Second section is designed

--- a/home.html
+++ b/home.html
@@ -13,9 +13,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <div class="top-left-text">
+        <h3>Myatty</h3>
+    </div>
 
     <section class="grid">
         <div class="intro-text">
@@ -23,13 +30,36 @@
             <p class="paragraph">Passionate developer focused on AI, Computer Vision, and innovative <br> software
                 and Artificial Intelligence Solutions.</p>
             <div class="wrapper">
-                <p class="left">I’m a junior software engineer with expertise in <br> Backend and currently developing skills for <br> DevOps and Computer Vision.</p>
+                <p class="left">I’m a junior software engineer with expertise in <br> Backend and currently developing
+                    skills for <br> DevOps and Computer Vision.</p>
                 <p class="right"> I’m passionate
                     about building scalable systems and <br> solving complex problems.</p>
             </div>
         </div>
-        <div>2</div>
+        <div>
+
+        </div>
+
     </section>
+
+    <div class="second-section">
+        <div class="se">
+            <h2>Experiences</h2>
+            <p>As a software engineer, I thrive on creating cutting-edge solutions and overcoming complex challenges. My
+                work spans from backend development to exploring AI, where each project fuels my drive <br> for innovation.
+            </p>
+        </div>
+        <div class="dedi">
+            <h2>Dedication</h2>
+            <p>Dedicated to ongoing learning, I focus on mastering new technologies and <br> My journey in
+                software engineering is marked by a commitment  to  <br> expanding my skills and making impactful
+                contributions.</p>
+        </div>
+    </div>
+
+    <div class="image">
+        <img src="cat.jpeg" alt="">
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
