Designed Second Section & Started working on third section

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 <body>
 
     <div class="top-left-text">
-        <h3>Myatty</h3>
+        <h3>Script Kitty </h3>
     </div>
 
     <section class="grid">
@@ -44,18 +44,46 @@
 
     <div class="second-section">
         <div class="se">
-            <h2>Experiences</h2>
-            <p>As a software engineer, I thrive on creating cutting-edge solutions and overcoming complex challenges. My
-                work spans from backend development to exploring AI, where each project fuels my drive <br> for innovation.
+            <h2><strong>Experiences</strong></h2>
+            <p>As a junior engineer, I thrive on creating cutting-edge solutions and overcoming complex challenges. My
+                work spans from backend development to exploring AI, where each project fuels my drive <br> for
+                innovation.
             </p>
+
+            <div class="square-group">
+                <div class="sqOne"></div>
+                <div class="sqOne"></div>
+                <div class="sqOne"></div>
+                <div class="sqOne"></div>
+                <div class="sqOne"></div>
+                <div class="sqOne"></div>
+            </div>
+            <div class="dotted"></div>
         </div>
         <div class="dedi">
-            <h2>Dedication</h2>
+
+            <div class="circleGroup">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="sqDotted"></div>
+            </div>
+
+
+            <h2><strong>Dedication</strong></h2>
             <p>Dedicated to ongoing learning, I focus on mastering new technologies and <br> My journey in
-                software engineering is marked by a commitment  to  <br> expanding my skills and making impactful
+                software engineering is marked by a commitment to <br> expanding my skills and making impactful
                 contributions.</p>
         </div>
+
     </div>
+
+    <section class="third-section">
+        <h1>hi</h1>
+    </section>
 
     <div class="image">
         <img src="cat.jpeg" alt="">
